# guan-manager

./: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: AntdProvider.tsx  App.tsx  debugConst.ts  init.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: icons.rs  lib.rs  main.rs  menu.rs  models.rs  state.rs  utils.rs  winget_utils.rs
src-tauri/src/commands/winget/: actions.rs  mod.rs  query.rs  stream.rs
src/components/display/: CommandDisplay.tsx  LogTerminal.tsx  SoftwareIcon.tsx  TextWithLinks.tsx  VersionBadge.tsx
src/components/form/: GeneralForm.tsx  ProxyForm.tsx  Settings.tsx  SettingsModal.tsx  default.ts
src/components/icon/: UACShieldIcon.tsx
src/components/input/: CustomFlagsInput.tsx  HashOverrideCheckbox.tsx  ProxyConfigCheckbox.tsx
src/components/modal/: About.tsx  AboutModal.tsx  DetailModal.tsx  DownloadModal.tsx  InstallModal.tsx  ModalActionFooter.tsx  UninstallModal.tsx  UpgradeModal.tsx
src/components/tab/: FeaturesTab.tsx  InfoTab.tsx  InstalledTab.tsx  OnlineSearchTab.tsx  SourcesTab.tsx  UpgradesTab.tsx
src/components/table/: SoftwareTable.tsx  TableCellWithMenu.tsx
src/constants/: env.ts  link.ts  soft.ts
src/enums/: ThemeEnum.ts  proxyEnum.ts
src/hooks/: useIsDarkMode.ts  useListen.ts  useLogTerminal.ts
src/hooks/winget/: useFetchData.ts
src/services/winget/: constants.ts  package.ts  system.ts
src/sync/: configSync.ts
src/sync/base/: crossWindowSync.ts
src/sync/types/: ConfigItem.ts
src/types/: form.ts  winget.ts
src/utils/: detail.ts  formUtils.ts  modalUtils.ts  url.ts
(+6 files in other folders)
